# ovh-dns-updater

./: Dockerfile  conf.example.py  ovh-dns-updater.py  pyproject.toml  requirements.txt
