[tool.poetry]
name = "ovh-dns-updater"
version = "0.1.0"
description = ""
authors = ["slowphil <coding.e.pjoyez@neverbox.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ovh = "^1.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
